topics/get-picklist-values-by-recordtype/main/default/objects/Trip__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>