topics/get-picklist-values-by-recordtype/main/default/objects/Trip__c/recordTypes/Business_Trip.recordType-meta.xml
<RecordType>
    <fullName>Business_Trip</fullName>
    <active>true</active>
    <description>Business Trip record type</description>
    <label>Business Trip</label>
</RecordType>