topics/get-picklist-values-by-recordtype/main/default/objects/Trip__c/recordTypes/Vacation.recordType-meta.xml
<RecordType>
    <fullName>Vacation</fullName>
    <active>true</active>
    <description>Vacation record type</description>
    <label>Vacation</label>
</RecordType>